--- a/src/Formulario/login.form
+++ b/src/Formulario/login.form
@@ -140,6 +140,9 @@
           <Font name="Rockwell" size="24" style="0"/>
         </Property>
       </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+      </AuxValues>
     </Component>
     <Component class="javax.swing.JButton" name="btn_entrar">
       <Properties>
